test/files/invalid/docstrings_root_type.fbs
//! Okay
/// Bad1
//! Bad2
/// Bad3
root_type /// Bad4
/// Bad5
Foo /// Bad6
/// Bad7
; /// Bad8
//! Bad9

table Foo {}
