test/files/invalid/docstrings_root_type.stderr
error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:2:1
  │
2 │ /// Bad1
  │ ^^^^^^^^

error: Inner doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:3:1
  │
3 │ //! Bad2
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:4:1
  │
4 │ /// Bad3
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:5:11
  │
5 │ root_type /// Bad4
  │           ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:6:1
  │
6 │ /// Bad5
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:7:5
  │
7 │ Foo /// Bad6
  │     ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:8:1
  │
8 │ /// Bad7
  │ ^^^^^^^^

error: Doc comments are not meaningful here.
  ┌─ test/files/invalid/docstrings_root_type.fbs:9:3
  │
9 │ ; /// Bad8
  │   ^^^^^^^^

error: Inner doc comments (those starting with `//!`) are only allowed at the beginning of the file and are used to document the namespace. If you meant to write a normal doc comment, those start with `///`.
   ┌─ test/files/invalid/docstrings_root_type.fbs:10:1
   │
10 │ //! Bad9
   │ ^^^^^^^^

